# bridgr-engine

./: CLAUDE.md
.claude/: settings.json
.claude/commands/: ship.md
bindings/python/: ARGUS_INTEGRATION.md  LICENSES.md  pyproject.toml
bindings/python/src/bridgr/: __init__.py  algorithms.py  argus.py  audit.py  database.py  exceptions.py  export.py  mcp_server.py  migrate.py  vector.py
bindings/python/tests/: test_algorithms.py  test_audit.py  test_bridgr_store.py  test_database.py  test_delta_lake.py  test_export.py  test_mcp_server.py  test_mcp_v02.py  test_migration.py
scripts/antlr4/: Cypher.g4  hash.md5
src/antlr4/: Cypher.g4  keywords.txt
src/binder/: binder.cpp  bound_statement_visitor.cpp
src/binder/bind/: bind_ddl.cpp
src/catalog/catalog_entry/: index_catalog_entry.cpp
src/include/binder/: binder.h  bound_statement_visitor.h
src/include/parser/: parsed_statement_visitor.h  transformer.h
src/include/planner/: planner.h
src/include/processor/: plan_mapper.h
src/parser/: parsed_statement_visitor.cpp  transformer.cpp
src/parser/transform/: transform_ddl.cpp
src/planner/: planner.cpp
src/planner/operator/: logical_operator.cpp
src/planner/plan/: append_simple.cpp
src/processor/map/: map_ddl.cpp  plan_mapper.cpp
src/processor/operator/: physical_operator.cpp
src/storage/table/: arrow_rel_table.cpp  node_table.cpp  parquet_rel_table.cpp  rel_table.cpp
test/api/: arrow_rel_table_test.cpp
test/test_runner/: fsm_leak_checker.cpp
validation/: PHASE0_REPORT.md  phase0_results.json  phase0_validate.py
(+22 files in other folders)
